--- a/Site Web/index.html
+++ b/Site Web/index.html
@@ -16,7 +16,13 @@
     <div class="div-connexion">
         <div class="connexion">
             <p class="title-connexion">Connexion</p>
-
+            <div class="border"></div>
+            <div class="email">
+                <input type="text" placeholder="email"/>
+            </div>
+            <div class="password">
+                <input type="password" placeholder="password"/>
+            </div>
         </div>
     </div>
 </body>
