--- a/Site Web/pages/list.html
+++ b/Site Web/pages/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,15 +10,168 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="js/main.js"></script>
 </head>
-<body>
-    <div class="div-logo">
-        <img src="img/" alt="Logo" class="logo">
-    </div>
-    <div class="div-connexion">
-        <div class="connexion">
-            <p class="title-connexion">FOURNISSEURS</p>
 
+<body>
+    <div class="list-div-logo">
+        <img src="img/" alt="Logo">
+    </div>
+    <div class="list-title-container">
+        <h1 class="list-title">FOURNISSEURS</p>
+    </div>
+    <div class="list-cards">
+        <div class="list-card">
+            <div class="list-card-line1">
+                <p class="list-name">Nom</p>
+                <p>adresse email</p>
+                <p>01 02 03 04 05</p>
+                <a href="#">
+                    <i class="material-icons pen">edit</i>
+                </a>
+            </div>
+            <div class="list-card-line2">
+                <p>Adresse</p>
+            </div>
+            <div class="list-card-line3">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
+                    quasi expedita quibusdam tenetur eius modi asperiores temporibus tempora eaque fuga sequi, nulla
+                    voluptatibus magni possimus dicta.</p>
+                <a href="#">
+                    <i class="material-icons bin">delete</i>
+                </a>
+            </div>
+        </div>
+        <div class="list-card">
+            <div class="list-card-line1">
+                <p class="list-name">Nom</p>
+                <p>adresse email</p>
+                <p>numéro de téléphone</p>
+                <a href="#">
+                    <i class="material-icons pen">edit</i>
+                </a>
+            </div>
+            <div class="list-card-line2">
+                <p>Adresse</p>
+            </div>
+            <div class="list-card-line3">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
+                    quasi expedita quibusdam tenetur eius modi asperiores temporibus tempora eaque fuga sequi, nulla
+                    voluptatibus magni possimus dicta.</p>
+                <a href="#">
+                    <i class="material-icons bin">delete</i>
+                </a>
+            </div>
+        </div>
+        <div class="list-card">
+            <div class="list-card-line1">
+                <p class="list-name">Nom</p>
+                <p>adresse email</p>
+                <p>numéro de téléphone</p>
+                <a href="#">
+                    <i class="material-icons pen">edit</i>
+                </a>
+            </div>
+            <div class="list-card-line2">
+                <p>Adresse</p>
+            </div>
+            <div class="list-card-line3">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
+                    quasi expedita quibusdam tenetur eius modi asperiores temporibus tempora eaque fuga sequi, nulla
+                    voluptatibus magni possimus dicta.</p>
+                <a href="#">
+                    <i class="material-icons bin">delete</i>
+                </a>
+            </div>
+        </div>
+        <div class="list-card">
+            <div class="list-card-line1">
+                <p class="list-name">Nom</p>
+                <p>adresse email</p>
+                <p>numéro de téléphone</p>
+                <a href="#">
+                    <i class="material-icons pen">edit</i>
+                </a>
+            </div>
+            <div class="list-card-line2">
+                <p>Adresse</p>
+            </div>
+            <div class="list-card-line3">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
+                    quasi expedita quibusdam tenetur eius modi asperiores temporibus tempora eaque fuga sequi, nulla
+                    voluptatibus magni possimus dicta.</p>
+                <a href="#">
+                    <i class="material-icons bin">delete</i>
+                </a>
+            </div>
+        </div>
+        <div class="list-card">
+            <div class="list-card-line1">
+                <p class="list-name">Nom</p>
+                <p>adresse email</p>
+                <p>numéro de téléphone</p>
+                <a href="#">
+                    <i class="material-icons pen">edit</i>
+                </a>
+            </div>
+            <div class="list-card-line2">
+                <p>Adresse</p>
+            </div>
+            <div class="list-card-line3">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
+                    quasi expedita quibusdam tenetur eius modi asperiores temporibus tempora eaque fuga sequi, nulla
+                    voluptatibus magni possimus dicta.</p>
+                <a href="#">
+                    <i class="material-icons bin">delete</i>
+                </a>
+            </div>
+        </div>
+        <div class="list-card">
+            <div class="list-card-line1">
+                <p class="list-name">Nom</p>
+                <p>adresse email</p>
+                <p>numéro de téléphone</p>
+                <a href="#">
+                    <i class="material-icons pen">edit</i>
+                </a>
+            </div>
+            <div class="list-card-line2">
+                <p>Adresse</p>
+            </div>
+            <div class="list-card-line3">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
+                    quasi expedita quibusdam tenetur eius modi asperiores temporibus tempora eaque fuga sequi, nulla
+                    voluptatibus magni possimus dicta.</p>
+                <a href="#">
+                    <i class="material-icons bin">delete</i>
+                </a>
+            </div>
+        </div>
+        <div class="list-card">
+            <div class="list-card-line1">
+                <p class="list-name">Nom</p>
+                <p>adresse email</p>
+                <p>numéro de téléphone</p>
+                <a href="#">
+                    <i class="material-icons pen">edit</i>
+                </a>
+            </div>
+            <div class="list-card-line2">
+                <p>Adresse</p>
+            </div>
+            <div class="list-card-line3">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
+                    quasi expedita quibusdam tenetur eius modi asperiores temporibus tempora eaque fuga sequi, nulla
+                    voluptatibus magni possimus dicta.</p>
+                <a href="#">
+                    <i class="material-icons bin">delete</i>
+                </a>
+            </div>
         </div>
     </div>
+    <a href="#">
+        <div class="list-add-div">
+            <i class="material-icons add">add</i>
+        </div>
+    </a>
 </body>
+
 </html>
