Adding - Add page & minor changes css attributes

--- a/Site Web/index.html
+++ b/Site Web/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Site ViaBrico</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="js/main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
     <div class="index-div-logo">
@@ -25,5 +26,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Scripts calling -->
+    <script src="js/main.js"></script>
 </body>
 </html>
