--- a/Site Web/pages/list.html
+++ b/Site Web/pages/list.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Site ViaBrico</title>
+    <title>ViaBrico | Liste fournisseurs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../styles/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="js/main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
@@ -167,11 +168,14 @@
             </div>
         </div>
     </div>
-    <a href="#">
+    <a href="./add.html">
         <div class="list-add-div">
             <i class="material-icons add">add</i>
         </div>
     </a>
+
+    <!-- Scripts calling -->
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
