Description input icon position resolved

--- a/Site Web/pages/add.html
+++ b/Site Web/pages/add.html
@@ -45,7 +45,7 @@
                 <input type="text" placeholder="Adresse" required/>
             </div>
             <div class="add-description">
-                <span class="input-group-addon"><i class="material-icons">comment</i></span>
+                <span class="input-group-addon"><i class="material-icons comment">comment</i></span>
                 <textarea name="description" placeholder="Description" required></textarea>
             </div>
 
