API Get method working

--- a/Site Web/pages/list.html
+++ b/Site Web/pages/list.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ViaBrico | Liste fournisseurs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/reset.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href=/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
     <div class="list-title-container">
         <h1 class="list-title">FOURNISSEURS</p>
     </div>
-    <div class="list-cards">
+    <div class="list-cards" class="list-cards">
         <div class="list-card">
             <div class="list-card-line1">
                 <p class="list-name">Nom</p>
@@ -168,14 +168,14 @@
             </div>
         </div>
     </div>
-    <a href="./add.html">
+    <a href="fournisseurs/ajout">
         <div class="list-add-div">
             <i class="material-icons add">add</i>
         </div>
     </a>
 
     <!-- Scripts calling -->
-    <script src="../js/main.js"></script>
+    <script src="/main.js"></script>
 </body>
 
 </html>
