--- a/Site Web/pages/add.html
+++ b/Site Web/pages/add.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ViaBrico | Ajouter un fournisseur</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/reset.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
@@ -54,7 +54,5 @@
         </form>
     </div>
     
-    <!-- Scripts calling -->
-    <script src="../js/main.js"></script>
 </body>
 </html>
