Adding style variables to scss

--- a/Site Web/pages/list.html
+++ b/Site Web/pages/list.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="list-div-logo">
+    <div class="div-logo">
         <img src="img/" alt="Logo">
     </div>
     <div class="list-title-container">
@@ -23,14 +23,14 @@
         <div class="list-card">
             <div class="list-card-line1">
                 <p class="list-name">Nom</p>
-                <p>adresse email</p>
-                <p>01 02 03 04 05</p>
+                <p class="list-email">adresse email</p>
+                <p class="list-phone">01 02 03 04 05</p>
                 <a href="#">
                     <i class="material-icons pen">edit</i>
                 </a>
             </div>
             <div class="list-card-line2">
-                <p>Adresse</p>
+                <p class="list-address">Adresse</p>
             </div>
             <div class="list-card-line3">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
@@ -44,14 +44,14 @@
         <div class="list-card">
             <div class="list-card-line1">
                 <p class="list-name">Nom</p>
-                <p>adresse email</p>
-                <p>numéro de téléphone</p>
+                <p class="list-email">adresse email</p>
+                <p class="list-phone">numéro de téléphone</p>
                 <a href="#">
                     <i class="material-icons pen">edit</i>
                 </a>
             </div>
             <div class="list-card-line2">
-                <p>Adresse</p>
+                <p class="list-address">Adresse</p>
             </div>
             <div class="list-card-line3">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
@@ -65,14 +65,14 @@
         <div class="list-card">
             <div class="list-card-line1">
                 <p class="list-name">Nom</p>
-                <p>adresse email</p>
-                <p>numéro de téléphone</p>
+                <p class="list-email">adresse email</p>
+                <p class="list-phone">numéro de téléphone</p>
                 <a href="#">
                     <i class="material-icons pen">edit</i>
                 </a>
             </div>
             <div class="list-card-line2">
-                <p>Adresse</p>
+                <p class="list-address">Adresse</p>
             </div>
             <div class="list-card-line3">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
@@ -86,14 +86,14 @@
         <div class="list-card">
             <div class="list-card-line1">
                 <p class="list-name">Nom</p>
-                <p>adresse email</p>
-                <p>numéro de téléphone</p>
+                <p class="list-email">adresse email</p>
+                <p class="list-phone">numéro de téléphone</p>
                 <a href="#">
                     <i class="material-icons pen">edit</i>
                 </a>
             </div>
             <div class="list-card-line2">
-                <p>Adresse</p>
+                <p class="list-address">Adresse</p>
             </div>
             <div class="list-card-line3">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
@@ -107,14 +107,14 @@
         <div class="list-card">
             <div class="list-card-line1">
                 <p class="list-name">Nom</p>
-                <p>adresse email</p>
-                <p>numéro de téléphone</p>
+                <p class="list-email">adresse email</p>
+                <p class="list-phone">numéro de téléphone</p>
                 <a href="#">
                     <i class="material-icons pen">edit</i>
                 </a>
             </div>
             <div class="list-card-line2">
-                <p>Adresse</p>
+                <p class="list-address">Adresse</p>
             </div>
             <div class="list-card-line3">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
@@ -128,14 +128,14 @@
         <div class="list-card">
             <div class="list-card-line1">
                 <p class="list-name">Nom</p>
-                <p>adresse email</p>
-                <p>numéro de téléphone</p>
+                <p class="list-email">adresse email</p>
+                <p class="list-phone">numéro de téléphone</p>
                 <a href="#">
                     <i class="material-icons pen">edit</i>
                 </a>
             </div>
             <div class="list-card-line2">
-                <p>Adresse</p>
+                <p class="list-address">Adresse</p>
             </div>
             <div class="list-card-line3">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
@@ -149,14 +149,14 @@
         <div class="list-card">
             <div class="list-card-line1">
                 <p class="list-name">Nom</p>
-                <p>adresse email</p>
-                <p>numéro de téléphone</p>
+                <p class="list-email">adresse email</p>
+                <p class="list-phone">numéro de téléphone</p>
                 <a href="#">
                     <i class="material-icons pen">edit</i>
                 </a>
             </div>
             <div class="list-card-line2">
-                <p>Adresse</p>
+                <p class="list-address">Adresse</p>
             </div>
             <div class="list-card-line3">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus odio omnis veritatis explicabo
