--- a/Site Web/index.html
+++ b/Site Web/index.html
@@ -11,28 +11,29 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-    <div class="index-div-logo">
+    <div class="div-logo">
         <img src="img/" alt="Logo" class="index-logo">
     </div>
-    <div class="index-div-connexion">
-        <form class="index-connexion" action="" method="get">
-            <p class="index-title-connexion">Connexion</p>
-            <div class="index-border"></div>
-            <div class="index-email">
-                <span class="index-icon-mail">
-                    <i class="material-icons">alternate_email</i> 
-                </span>
-                <input type="text" placeholder="Email"/>
-            </div>
-            <div class="index-password">
-                <span class="index-icon-password"><i class="material-icons">lock</i></span>
-                <input type="password" placeholder="Mot de passe"/>
-            </div>
-            <div class="index-button">
-                <input type="button" class="connecter" value="Se connecter"/>
-            </div>
-        </from>
-    </div>
 
+    <div class="index-div-connexion">
+        <form class="index-form" action="" method="POST">
+
+            <h1 class="index-title">Connexion</h1>
+            <hr class="index-separation-form">
+
+            <div class="index-email">
+                <span class="input-group-addon"><i class="material-icons">alternate_email</i></i></span>
+                <input type="email" placeholder="Email" required/>
+            </div>
+            <div class="index-phone">
+                <span class="input-group-addon"><i class="material-icons">lock</i></span>
+                <input type="password" placeholder="Mot de passe" required/>
+            </div>
+
+            <button type="submit">Se connecter</button>
+            
+        </form>
+    </div>
+    
 </body>
 </html>
