--- a/Site Web/pages/add.html
+++ b/Site Web/pages/add.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-    <div class="index-div-logo">
+    <div class="div-logo">
         <img src="../img/" alt="Logo" class="index-logo">
     </div>
 
