--- a/Site Web/pages/list.html
+++ b/Site Web/pages/list.html
@@ -23,6 +23,12 @@
     <div id="list-cards">
     </div>
 
+    <a href="./add.html">
+        <div class="list-add-div">
+            <i class="material-icons add">add</i>
+        </div>
+    </a>
+
 
 </body>
 
