Post method not working

--- a/Site Web/pages/add.html
+++ b/Site Web/pages/add.html
@@ -49,7 +49,7 @@
                 <textarea name="description" id="description" placeholder="Description" required></textarea>
             </div>
 
-            <button type="submit" onclick="addForm()">Ajouter</button>
+            <button type="submit" onclick="addForm(name, email, phoneNumber, address, description)">Ajouter</button>
             
         </form>
     </div>
