--- a/Site Web/pages/add.html
+++ b/Site Web/pages/add.html
@@ -55,6 +55,6 @@
     </div>
     
     <script src="../js/add.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
 </body>
 </html>
