Change API link

--- a/Site Web/pages/add.html
+++ b/Site Web/pages/add.html
@@ -23,7 +23,7 @@
     </a>
 
     <div class="add-div-connexion">
-        <form class="add-form" method="POST" action="http://localhost:3000/fournisseurs">
+        <form class="add-form" method="POST" action="https://viabrico-api.herokuapp.com/fournisseurs/">
 
             <h1 class="add-title">Ajout d'un fournisseur</h1>
             <hr class="add-separation-form">
