comments done for API

--- a/Site Web/pages/list.html
+++ b/Site Web/pages/list.html
@@ -34,6 +34,7 @@
 
 <!-- Scripts calling -->
 <script src="../js/list.js"></script>
+<script src="../js/edit.js"></script>
 <script src="../js/delete.js"></script>
 
 </html>
