Adding logout button to the list page

--- a/Site Web/pages/list.html
+++ b/Site Web/pages/list.html
@@ -30,6 +30,13 @@
             <i class="material-icons add">add</i>
         </div>
     </a>
+
+    <div class="list-logout-form">
+        <form method="POST" action="/logout">
+            <button><i class="material-icons logout">exit_to_app</i></button>
+        </form>
+    </div>
+
 </body>
 
 <!-- Scripts calling -->
