Adding ViaBrico logo

--- a/Site Web/pages/add.html
+++ b/Site Web/pages/add.html
@@ -11,9 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-    <div class="div-logo">
-        <img src="../img/" alt="Logo" class="index-logo">
-    </div>
+    <div class="div-logo"></div>
 
     <a class="back" href="javascript:history.back()">
         <div class="add-goback-btn">
