--- a/Site Web/pages/list.html
+++ b/Site Web/pages/list.html
@@ -15,9 +15,9 @@
 
 <body>
     <div id="output"></div>
-    <div class="div-logo">
-        <img src="img/" alt="Logo">
-    </div>
+    
+    <div class="div-logo"></div>
+    
     <div class="list-title-container">
         <h1 class="list-title">FOURNISSEURS</p>
     </div>
