--- a/Site Web/index.html
+++ b/Site Web/index.html
@@ -13,9 +13,7 @@
 </head>
 <body>
         
-    <div class="div-logo">
-        <img src="img/" alt="Logo" class="index-logo">
-    </div>
+    <div class="div-logo"></div>
 
     <div class="index-div-connexion">
         <form class="index-form" action="" method="POST">
