Fix redirection in login

--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -16,7 +16,7 @@
     <div class="div-logo"></div>
 
     <div class="index-div-connexion">
-        <form class="index-form" action="" method="POST">
+        <!-- <form class="index-form" action="" method="POST" id="loginform"> -->
 
             <h1 class="index-title">Connexion</h1>
             <hr class="index-separation-form">
@@ -32,7 +32,7 @@
 
             <button type="submit" onclick="connexion()">Se connecter</button>
             
-        </form>
+        <!-- </form> -->
     </div>
 <script src="js/login.js"></script>  
 </body>
