Fix logout Button

--- a/WEBSITE/pages/list.html
+++ b/WEBSITE/pages/list.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ViaBrico | Liste fournisseurs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href=../styles/reset.css"> 
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href=../styles/reset.css"> <link rel="stylesheet"
+        type="text/css" media="screen" href="../styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -15,9 +15,9 @@
 
 <body>
     <div id="output"></div>
-    
+
     <div class="div-logo"></div>
-    
+
     <div class="list-title-container">
         <h1 class="list-title">FOURNISSEURS</p>
     </div>
@@ -31,11 +31,9 @@
         </div>
     </a>
 
-    <div class="list-logout-form">
-        <form method="POST" action="/logout">
-            <button><i class="material-icons logout">exit_to_app</i></button>
-        </form>
-    </div>
+    <a href="../index.html" class="list-logout-form">
+        <button><i class="material-icons logout">exit_to_app</i></button>
+    </a>
 
     <!-- Scripts calling -->
     <script src="../js/list.js"></script>
