Login system bullshit

--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -16,7 +16,7 @@
     <div class="div-logo"></div>
 
     <div class="index-div-connexion">
-        <form class="index-form" action="" method="POST">
+        <form class="index-form" action="http://localhost:3000/login" method="POST">
 
             <h1 class="index-title">Connexion</h1>
             <hr class="index-separation-form">
